# e_midi

./: .gitignore  .release-plz.toml  CHANGELOG.md  Cargo.toml  LAST_RELEASE  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release-plz.yml
documents/: CRITICAL_INTEGRATION_ANALYSIS.md  GRID_INTEGRATION_GUIDE.md  INTEGRATION_DESIGN.md  README.md
e_midi/: CHANGELOG.md  Cargo.toml  LAST_RELEASE  README.md  build.rs
e_midi/examples/: demo_focus_resize_move_play_resume.rs  musicxml_to_timeline.rs  simple.rs
e_midi/midi/: README.MIDI.md  confirm.mid  error.mid  error_2.mid  panic.mid
e_midi/src/: cli.rs  lib.rs  tui.rs  types.rs
e_midi/src/ipc/: music_sync_publisher.rs  music_sync_subscriber.rs  subscriber.rs  types.rs
e_midi_shared/: CHANGELOG.md  Cargo.toml  README.md
e_midi_shared/ipc/: mod.rs
e_midi_shared/src/: embed_midi.rs  embed_musicxml.rs  ipc_protocol.rs  lib.rs  media_playback.rs  midi.rs  mod.rs  types.rs
e_midi_shared/src/ipc/: events.rs  mod.rs  music_sync_publisher.rs  music_sync_subscriber.rs  publisher.rs  service.rs  subscriber.rs  types.rs
examples/: demo_focus.rs  demo_focus_resize_move.rs  demo_focus_resize_move_play_resume.rs
midi/: README.MIDI.md  alert.mid  coin.mid  notice.mid  panic_2.mid  powerup.mid  success.mid  success_2.mid  warning.mid
src/: cli.rs  lib.rs  main.rs  tui.rs
src/ipc/: events.rs  mod.rs  publisher.rs  service.rs  subscriber.rs  types.rs
tidalcycles-rs/: CHANGELOG.md  Cargo.toml  LAST_RELEASE  README.md
tidalcycles-rs/src/: find.rs  install.rs  lib.rs  main copy 2.rs  main copy.rs  main.rs  supercollider_dirt.rs  supercollider_looper.rs  supercollider_sc3_plugins.rs
