[package]
name = "e_midi"
version = "0.1.0"
edition = "2021"
authors = ["David Horner"]
description = "A interactive/cli/lib MIDI player with advanced playback options, looping, and scan modes."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/davehorner/e_midi/"
repository = "https://github.com/davehorner/e_midi/"
keywords = ["midi", "music", "audio", "player", "interactive"]
categories = ["multimedia::audio", "command-line-utilities"]
rust-version = "1.70"

[dependencies]
ansi_term = "0.12.1"
midir = "0.10.1"
rimd = "0.0.1"
midly = "0.5.3"
crossterm = "0.29.0"
ratatui = "0.28"
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.4"
iceoryx2 = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
midly = "0.5.3"
rimd = "0.0.1"
