[package]
name = "e_midi_shared"
version = "0.1.4"
edition = "2021"
description = "Shared types/midi/MusicXML logic for e_midi and its build script."
authors = ["David Horner"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/davehorner/e_midi/"
repository = "https://github.com/davehorner/e_midi/"
keywords = ["midi", "music", "audio", "player", "interactive"]
categories = ["multimedia::audio", "command-line-utilities"]
rust-version = "1.70"

[features]
default = []
uses_gstreamer = ["gstreamer", "gstreamer-player", "glib"]
uses_rodio = ["rodio"]


[dependencies]
musicxml = "1.1.2"
quick-xml = "0.37.5"
midly = "0.5.3"
rodio = { version = "0.20.1", optional = true }
gstreamer = { version = "0.22.8", optional = true }
gstreamer-player = { version = "0.22.6", optional = true }
glib = { version = "0.20.12", optional = true }
which = "8.0.0"
iceoryx2 = "0.6.1"
serde = "1.0.219"
serde_json = "1.0.140"
once_cell = "1.21.3"


